applications/alpine-4447166/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: alpine-4447166
  namespace: alpine

spec:
  selector:
    app: alpine-4447166

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
