applications/alpine-4447166/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: alpine-4447166
  namespace: alpine

spec:
  ingressClassName: traefik

  rules:
  - host: alpine-4447166.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: alpine-4447166

            port:
              number: 80
